trabajando en javascript intentando no complejizar

--- a/index.css
+++ b/index.css
@@ -18,7 +18,7 @@
     text-shadow: -3px -3px 0 #fb01fc, 3px 3px 0 #04fbf6;
 }
 
-.Boton{
+.Buttom{
     display: flex;
     justify-content: center;  
     color: #fff;
